# SFP_BD-SP

./: .gitignore  Readme.md  config.yml  main.py  pyproject.toml  requirements.txt  starterPokemon.py
app/: VideoCamera.py  config.py  helper.py  imageProcessing.py  macro.py  main.py  notification.py
macro/: Maccro.py  Starter.nxbt
model/: keras_model.h5  labels.txt
templates/: index.html
